--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Group 1</title>
+    <title>Group 2</title>
   </head>
   <body>
     <div class="container">
@@ -34,8 +34,16 @@
               Group 2
             </h1>
             <p>
-              Leader: <br />
-              Members: <br />
+              Members: <br /><br />
+              Patric Aserit <br />
+              Josh Demol <br />
+              Royweto Santuele <br />
+              Elijah Valenzuela <br />
+              Christine Bonanza <br />
+              Princess Jardeliza <br />
+              Angelica Napoles <br />
+              Heart Plaza <br />
+              Drew Santiago <br />
               
             </p>
           </div>
