--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <div class="left__wrapper">
           <div class="heading">
             <h1>
-              Group 2
+              Bowl of Thoughts & Future Talks
             </h1>
+            <p>The Bowl of Thoughts & Future Talks podcast showcases HUMSS students who shares their thoughts and aspirations as they step closer to college life and young adulthood. This podcast features the struggles, experiences, goals in life, and future careers of students. Optimism, determination, and hard work are the students’ key elements in making their life after the senior high school graduation thriving.</p>
             <p>
               Members: <br /><br />
               Patric Aserit <br />
@@ -48,7 +49,7 @@
             </p>
           </div>
               <audio controls class="audio-player">
-                  <source src="Audio/oof.mp3" type="audio/mp3">
+                  <source src="Audio/g2.mp3" type="audio/mp3">
               </audio>
               <div class="text__container">
                 <p>
