--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </p>
           </div>
               <audio controls class="audio-player">
-                  <source src="Audio/g2.mp3" type="audio/mp3">
+                  <source src="Audio/g2.MP3" type="audio/MP3">
               </audio>
               <div class="text__container">
                 <p>
